--- a/src/main/resources/templates/administrativo/usuarios/lista.html
+++ b/src/main/resources/templates/administrativo/usuarios/lista.html
@@ -23,7 +23,7 @@
 					<button type="button" class="btn btn-dark navbar-toggle pull-left">
 						<i class="oi oi-menu"></i>
 					</button>
-					<a class="navbar-brand navbar-toggle pull-left" href="#">Curso Spring Boot</a>
+					<a class="navbar-brand navbar-toggle pull-left" href="#">Loja Spring Boot</a>
 				</div>
 			</div>
 		</nav>
@@ -34,7 +34,7 @@
 	    <aside>
 	        <nav class="sidebar  sidebar-open">
 	            <ul class="nav nav-pills">
-	                <li class="nav-item"><a class="nav-link " href="/"> <i
+	                <li class="nav-item"><a class="nav-link " href="/administrativo"> <i
 	                        class="oi oi-home"></i> <span>Home</span>
 	                </a></li>
 	            </ul>
@@ -65,11 +65,11 @@
 	            <ul class="nav nav-pills">
 	                <li class="nav-item"><span class="nav-link active">Funcionários</span></li>
 	                <li class="nav-item"><a class="nav-link"
-	                                        href="/funcionarios/cadastrar"> <i class="oi oi-plus"></i>
+	                                        href="/usuarios/cadastrar"> <i class="oi oi-plus"></i>
 	                    <span>Cadastrar </span>
 	                </a></li>
 	                <li class="nav-item"><a class="nav-link"
-	                                        href="/funcionarios/listar"> <i class="oi oi-spreadsheet"></i>
+	                                        href="/usuarios/listar"> <i class="oi oi-spreadsheet"></i>
 	                    <span>Listar </span>
 	                </a></li>
 	            </ul>
@@ -85,7 +85,7 @@
 	                        <span>Lista de Funcionários</span>
 	                    </li>
 	                </ul>
-	                <a class="btn btn-primary btn-md" href="/funcionarios/cadastrar" role="button">
+	                <a class="btn btn-primary btn-md" href="/usuarios/cadastrar" role="button">
 	                    <span class="oi oi-plus" title="Cadastro" aria-hidden="true"></span>
 	                    <span>Cadastrar Funcionários</span>
 	                </a>
@@ -318,7 +318,7 @@
 	
     <footer class="layout-footer">
         <div class="container">
-            <span class="footer-copy">&copy; 2018 MBallem. Todos os direitos reservados.</span>
+            <span class="footer-copy">&copy; 2020. Rodrigo Vinicius. Todos os direitos reservados.</span>
         </div>
     </footer>	
 
