--- a/src/main/resources/templates/administrativo/funcionarios/cadastro.html
+++ b/src/main/resources/templates/administrativo/funcionarios/cadastro.html
@@ -15,7 +15,7 @@
 					</ul>
 				</div>
 				<a class="btn btn-primary btn-md"
-					href="/usuarios/listar" role="button"> <span
+					href="/funcionarios/listar" role="button"> <span
 					class="oi oi-spreadsheet" title="Cadastro" aria-hidden="true"></span>
 					<span>Listar Funcionários</span>
 				</a>
