--- a/src/main/resources/templates/administrativo/funcionarios/cadastro.html
+++ b/src/main/resources/templates/administrativo/funcionarios/cadastro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:layout="http://www.w3.org/1999/xhtml"
+<html lang="pt" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
 	layout:decorate="~{administrativo/fragments/layout}">
 <head>
 <title>Página Cadastro de funcionário da loja virtual</title>
@@ -23,19 +23,19 @@
 		</div>
 
 		<div class="container" id="cadastro">
-			<form action="/administrativo/funcionarios/salvar"
+			<form action="/funcionarios/cadastrar"
 				method="POST"> <!--  th:object="${funcionario}"  -->
 				<div class="form-row">
 					<div class="form-group col-md-6">
 						<label for="nome">Nome do Funcionário</label> <input type="text"
 							class="form-control" id="nome" placeholder="Nome Completo"
-							autofocus="autofocus" value="" /> <!-- th:field="*{nome}"  -->
+							autofocus="autofocus" value=""/> <!-- th:field="*{nome}"  -->
 						<div class="invalid-feedback"></div>
 					</div>
 					<div class="form-group col-md-6">
 						<label for="salario">Salário Bruto</label> <input type="text"
 							class="form-control" id="salario" data-mask="#.###,00" data-mask-reverse="true"
-							 value="" /> <!-- th:field="*{salarioBruto}" -->
+							 value=""/> <!-- th:field="*{salarioBruto}" -->
 						<div class="invalid-feedback"></div>
 					</div>
 				</div>
@@ -55,7 +55,7 @@
 				<div class="form-row">
 					<div class="form-group col-md-6">
 						<label for="cargo">Cargo</label> <select id="cargo"
-							class="form-control" name="cargo">
+							class="form-control" name="cargo" field="">
 							<option value="">Selecione...</option>
 							<option value="1">Auxiliar Contábil</option>
 							<option value="2">Auxiliar Administrativo</option>
