--- a/src/main/resources/templates/administrativo/home.html
+++ b/src/main/resources/templates/administrativo/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="pt" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
 	<title>Loja Virtual com Spring MVC Spring Boot</title>
 	<meta charset="UTF-8" />
