--- a/src/main/resources/templates/administrativo/funcionarios/cadastro.html
+++ b/src/main/resources/templates/administrativo/funcionarios/cadastro.html
@@ -1,34 +1,10 @@
-<!DOCTYPE HTML>
-<html lang="pt" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+<!DOCTYPE html>
+	<html xmlns:layout="http://www.w3.org/1999/xhtml" 
 	layout:decorate="~{administrativo/fragments/layout}">
-<head>
-	<title>Página Cadastro de funcionário da loja virtual</title>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <meta name="description" content=""/>
-    <meta name="author" content=""/>
-
-    <!-- Bootstrap core CSS -->
-    <link href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="/webjars/open-iconic/font/css/open-iconic-bootstrap.min.css" rel="stylesheet"/>
-    
-    <!-- Custom styles for this template -->
-    <link href="/css/style.css" rel="stylesheet"/>
-</head>
-<body>
-<header>
-		<nav class="navbar navbar-inverse navbar navbar-dark bg-dark fixed-top">
-			<div class="container-fluid">
-				<div class="navbar-header">
-					<button type="button" class="btn btn-dark navbar-toggle pull-left">
-						<i class="oi oi-menu"></i>
-					</button>
-					<a class="navbar-brand navbar-toggle pull-left" href="#">Loja Spring Boot</a>
-				</div>
-			</div>
-		</nav>
-	</header>
+	<head>
+		<title>Painel Administrativo</title>
+	</head>
+	<body>
 	<section class="layout-content" layout:fragment="corpo">
 		<div class="page-header">
 			<nav class="navbar navbar-expand-md navbar-top bg-light">
@@ -48,18 +24,18 @@
 
 		<div class="container" id="cadastro">
 			<form action="/funcionarios/cadastrar"
-				method="POST"> <!--  th:object="${funcionario}"  -->
+				method="POST" th:object="${funcionario}">
 				<div class="form-row">
 					<div class="form-group col-md-6">
 						<label for="nome">Nome do Funcionário</label> <input type="text"
 							class="form-control" id="nome" placeholder="Nome Completo"
-							autofocus="autofocus" value="" name="nome"/> <!-- th:field="*{nome}"  -->
+							autofocus="autofocus" value="" name="nome" th:field="*{nome}" /> <!--  -->
 						<div class="invalid-feedback"></div>
 					</div>
 					<div class="form-group col-md-6">
 						<label for="salario">Salário Bruto</label> <input type="text"
-							class="form-control" id="salario" data-mask="#.###,00" data-mask-reverse="true"
-							 value="" name="salarioBruto"/> <!-- th:field="*{salarioBruto}" -->
+							class="form-control" id="salario" 
+							 value="" name="salarioBruto" th:field="*{salarioBruto}" /> <!-- data-mask="#.###,00" data-mask-reverse="true"  -->
 						<div class="invalid-feedback"></div>
 					</div>
 				</div>
@@ -79,8 +55,8 @@
 				<div class="form-row">
 					<div class="form-group col-md-6">
 						<label for="cargo">Cargo</label> <select id="cargo"
-							class="form-control" name="cargo" field="">
-							<option value="">Selecione...</option>
+							class="form-control" name="cargo" >
+							<option value="" >Selecione...</option>
 							<option value="1">Auxiliar Contábil</option>
 							<option value="2">Auxiliar Administrativo</option>
 							<option value="3">Contador</option>
@@ -103,14 +79,14 @@
 					<div class="form-group col-md-6">
 						<label for="logradouro">Logradouro</label> <input type="text"
 							class="form-control" id="logradouro"
-							placeholder="logradouro sem número" name="logradouro" value="" />
+							placeholder="logradouro sem número" name="logradouro" value="" th:field="*{logradouro}" />
 						<div class="invalid-feedback"></div>
 					</div>
 				</div>
 				<div class="form-row">
 					<div class="form-group col-md-6">
 						<label for="numero">Número</label> <input type="text"
-							class="form-control" id="numero" name="numero" value="" />
+							class="form-control" id="numero" name="numero" value="" th:field="*{numero}"  />
 						<div class="invalid-feedback"></div>
 					</div>
 					<div class="form-group col-md-6">
@@ -149,37 +125,15 @@
 					</div>
 				</div>
 				
-				<input type="hidden" id="id"  value="" /> <!-- th:field="*{id}" -->
+				<input type="hidden" id="id"  th:field="*{id}" value="" /> <!-- th:field="*{id}" -->
 				<button type="submit" class="btn btn-primary btn-sm">Salvar</button>
 			</form>
 		</div>
+		<br>
+		<br><br><br>
+		<div></div>
 	</section>
-    <footer class="layout-footer">
-        <div class="container">
-            <span class="footer-copy">&copy; 2020. Rodrigo Vinicius. Todos os direitos reservados.</span>
-        </div>
-    </footer>	
-    
-<!-- Bootstrap core JavaScript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="/webjars/jquery/jquery.min.js"></script>
-<script src="/webjars/jquery-mask-plugin/dist/jquery.mask.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-<script src="/webjars/bootstrap/js/bootstrap.min.js"></script>
-<script type="text/javascript">
 
-    $(function () {
-        $('[data-toggle="popover"]').popover();
-    });
-    
-	$(document).ready(function(){
-	    $(".navbar-toggle").click(function(){
-	        $(".sidebar").toggleClass("sidebar-open");
-	    })
-	});
-
-</script>
 
 </body>
 </html>
