Incluindo Estado e Cidade

--- a/src/main/resources/templates/administrativo/fragments/layout.html
+++ b/src/main/resources/templates/administrativo/fragments/layout.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 	<header>
-		<nav class="navbar navbar-inverse navbar navbar-dark bg-dark fixed-top">
+		<nav aria-label="" class="navbar navbar-inverse navbar navbar-dark bg-dark fixed-top">
 			<div class="container-fluid">
 				<div class="navbar-header">
 					<button type="button" class="btn btn-dark navbar-toggle pull-left">
@@ -44,7 +44,7 @@
 				</ul>
 
 				<ul class="nav nav-pills">
-					<li class="nav-item"><span class="nav-link active">Usuários</span></li>
+					<li class="nav-item"><span class="nav-link active">Funcionários</span></li>
 					<li class="nav-item"><a class="nav-link" 
 						href="/funcionarios/cadastrar"> <i class="oi oi-plus"></i> <span>Cadastrar </span>
 					</a></li>
@@ -52,6 +52,29 @@
 						href="/funcionarios/listar"> <i class="oi oi-spreadsheet"></i> <span>Listar </span>
 					</a></li>
 				</ul>
+				
+				<ul class="nav nav-pills">
+					<li class="nav-item"><span class="nav-link active">Estados</span></li>
+					<li class="nav-item"><a class="nav-link" 
+						href="/estados/cadastrar"> <i class="oi oi-plus"></i> <span>Cadastrar </span>
+					</a></li>
+					<li class="nav-item"><a class="nav-link" 
+						href="/estados/listar"> <i class="oi oi-spreadsheet"></i> <span>Listar </span>
+					</a></li>
+				</ul>
+				
+								
+				<ul class="nav nav-pills">
+					<li class="nav-item"><span class="nav-link active">Cidades</span></li>
+					<li class="nav-item"><a class="nav-link" 
+						href="/cidades/cadastrar"> <i class="oi oi-plus"></i> <span>Cadastrar </span>
+					</a></li>
+					<li class="nav-item"><a class="nav-link" 
+						href="/cidades/listar"> <i class="oi oi-spreadsheet"></i> <span>Listar </span>
+					</a></li>
+				</ul>
+				
+				
 			</nav>
 		</aside>
 			
