--- a/src/main/resources/templates/administrativo/funcionarios/lista.html
+++ b/src/main/resources/templates/administrativo/funcionarios/lista.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:layout="http://www.w3.org/1999/xhtml"
-	layout:decorate="~{administrativo/fragments/layout}">
+	layout:decorate="~{administrativo/fragments/layout}"
+	lang="pt">
 <head>
 <title>Painel Administrativo</title>
 </head>
@@ -102,11 +103,11 @@
 				<table class="table table-striped table-hover table-sm">
 					<thead>
 						<tr>
-							<th>#</th>
-							<th>Nome</th>
-							<th>Cargo</th>
-							<th>Salário</th>
-							<th>Ação</th>
+							<th scope="#">#</th>
+							<th scope="nome">Nome</th>
+							<th scope="cargo">Cargo</th>
+							<th scope="salario">Salário</th>
+							<th scope="acao">Ação</th>
 						</tr>
 					</thead>
 					<tbody>
@@ -130,11 +131,12 @@
 									<div class="modal-dialog">
 										<div class="modal-content">
 											<div class="modal-header">
+												<h5 class="modal-title">Deletar Funcionario</h5>
 												<button type="button" class="close" data-dismiss="modal"
 													aria-label="Fechar">
 													<span aria-hidden="true">×</span>
 												</button>
-												<h5 class="modal-title">Deletar Funcionario</h5>
+												
 											</div>
 											<div class="modal-body">
 												<h3>Deseja remover o funcionário?</h3>
