--- a/src/main/resources/templates/administrativo/funcionarios/cadastro.html
+++ b/src/main/resources/templates/administrativo/funcionarios/cadastro.html
@@ -67,13 +67,12 @@
 				</div>
 				<div class="form-row">
 					<div class="form-group col-md-6">
-						<!-- <label for="cidade">Cidade</label> <select th:field="*{cidade}"
+					<label for="cidade">Cidade</label> <select th:field="*{cidade}"
 							class="form-control">
 							<option th:each="cid: ${listaCidades}" th:value="${cid.id}"
 								th:text="${cid.nome}"></option>
 						</select>
 
- -->
 						<div class="invalid-feedback"></div>
 					</div>
 					<div class="form-group col-md-6">
