--- a/src/main/resources/templates/administrativo/produtos/cadastro.html
+++ b/src/main/resources/templates/administrativo/produtos/cadastro.html
@@ -57,7 +57,7 @@
 				</div>
 				<div class="form-row">
 					<div class="form-group col-md-6">
-						<label for="valorVenda">Valor de Venda</label> <input type="number"
+						<label for="valorVenda">Valor de Venda</label> <input type="number" step=".01"
 							class="form-control" id="valorVenda" autofocus="autofocus" 
 							value="" name="valorVenda" th:field="*{valorVenda}" />
 						<div class="invalid-feedback"></div>
