--- a/src/main/resources/templates/administrativo/fragments/layout.html
+++ b/src/main/resources/templates/administrativo/fragments/layout.html
@@ -40,10 +40,22 @@
 	<div class="layout-main">
 
 		<aside>
- 			<nav class="sidebar sidebar-open" style="height:800px">
+ 			<nav class="sidebar sidebar-open" style="height:1000px">
 				<ul class="nav nav-pills">
 					<li class="nav-item"><a class="nav-link "
 						href="/administrativo"> <i class="oi oi-home"></i> <span>Home</span>
+					</a></li>
+				</ul>
+				
+				<ul class="nav nav-pills">
+					<li class="nav-item"><span class="nav-link active">Entrada</span></li>
+					<li class="nav-item"><a class="nav-link"
+						href="/entrada/cadastrar"> <i class="oi oi-plus"></i> <span>Cadastrar
+						</span>
+					</a></li>
+					<li class="nav-item"><a class="nav-link"
+						href="/entrada/listar"> <i class="oi oi-spreadsheet"></i> <span>Listar
+						</span>
 					</a></li>
 				</ul>
 
