--- a/src/main/resources/templates/administrativo/funcionarios/cadastro.html
+++ b/src/main/resources/templates/administrativo/funcionarios/cadastro.html
@@ -33,7 +33,7 @@
 						<div class="invalid-feedback"></div>
 					</div>
 					<div class="form-group col-md-6">
-						<label for="salario">Salário Bruto</label> <input type="text"
+						<label for="salario">Salário Bruto</label> <input type="number" step=".01"
 							class="form-control" id="salario" 
 							 value="" name="salarioBruto" th:field="*{salarioBruto}" /> <!-- data-mask="#.###,00" data-mask-reverse="true"  -->
 						<div class="invalid-feedback"></div>
