--- a/src/main/resources/templates/administrativo/fragments/layout.html
+++ b/src/main/resources/templates/administrativo/fragments/layout.html
@@ -40,13 +40,13 @@
 	<div class="layout-main">
 
 		<aside>
- 			<nav class="sidebar sidebar-open" style="height:1000px">
+			<nav class="sidebar sidebar-open" style="height: 1000px">
 				<ul class="nav nav-pills">
 					<li class="nav-item"><a class="nav-link "
 						href="/administrativo"> <i class="oi oi-home"></i> <span>Home</span>
 					</a></li>
 				</ul>
-				
+
 				<ul class="nav nav-pills">
 					<li class="nav-item"><span class="nav-link active">Entrada</span></li>
 					<li class="nav-item"><a class="nav-link"
@@ -67,6 +67,18 @@
 					</a></li>
 					<li class="nav-item"><a class="nav-link"
 						href="/funcionarios/listar"> <i class="oi oi-spreadsheet"></i>
+							<span>Listar </span>
+					</a></li>
+				</ul>
+
+				<ul class="nav nav-pills">
+					<li class="nav-item"><span class="nav-link active">Papéis</span></li>
+					<li class="nav-item"><a class="nav-link"
+						href="/papeis/cadastrar"> <i class="oi oi-plus"></i> <span>Cadastrar
+						</span>
+					</a></li>
+					<li class="nav-item"><a class="nav-link"
+						href="/papeis/listar"> <i class="oi oi-spreadsheet"></i>
 							<span>Listar </span>
 					</a></li>
 				</ul>
@@ -135,17 +147,15 @@
 		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<script src="/webjars/bootstrap/js/bootstrap.min.js"></script>
 	<script type="text/javascript">
-	    
 		$(function() {
 			$('[data-toggle="popover"]').popover();
 		});
-		
-		$(document).ready(function(){
-		    $(".navbar-toggle").click(function(){
-		        $(".sidebar").toggleClass("sidebar-open");
-		    })
-		});
 
+		$(document).ready(function() {
+			$(".navbar-toggle").click(function() {
+				$(".sidebar").toggleClass("sidebar-open");
+			})
+		});
 	</script>
 </body>
 </html>
