Views: Cadastro & Lista -> Permissao

--- a/src/main/resources/templates/administrativo/fragments/layout.html
+++ b/src/main/resources/templates/administrativo/fragments/layout.html
@@ -40,7 +40,7 @@
 	<div class="layout-main">
 
 		<aside>
-			<nav class="sidebar sidebar-open" style="height: 1000px">
+			<nav class="sidebar sidebar-open" style="height: 1420px">
 				<ul class="nav nav-pills">
 					<li class="nav-item"><a class="nav-link "
 						href="/administrativo"> <i class="oi oi-home"></i> <span>Home</span>
@@ -77,9 +77,19 @@
 						href="/papeis/cadastrar"> <i class="oi oi-plus"></i> <span>Cadastrar
 						</span>
 					</a></li>
+					<li class="nav-item"><a class="nav-link" href="/papeis/listar">
+							<i class="oi oi-spreadsheet"></i> <span>Listar </span>
+					</a></li>
+				</ul>
+
+				<ul class="nav nav-pills">
+					<li class="nav-item"><span class="nav-link active">Permissoes</span></li>
 					<li class="nav-item"><a class="nav-link"
-						href="/papeis/listar"> <i class="oi oi-spreadsheet"></i>
-							<span>Listar </span>
+						href="/permissoes/cadastrar"> <i class="oi oi-plus"></i> <span>Cadastrar
+						</span>
+					</a></li>
+					<li class="nav-item"><a class="nav-link" href="/permissoes/listar">
+							<i class="oi oi-spreadsheet"></i> <span>Listar </span>
 					</a></li>
 				</ul>
 
