--- a/src/main/resources/templates/administrativo/permissoes/lista.html
+++ b/src/main/resources/templates/administrativo/permissoes/lista.html
@@ -10,11 +10,11 @@
 			<div class="collapse navbar-collapse" id="navbarsExampleDefault">
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item active"><i class="oi oi-caret-right"></i>
-						<span>Lista de Funcionários</span></li>
+						<span>Lista de Permissões</span></li>
 				</ul>
-				<a class="btn btn-primary btn-md" href="/cidades/cadastrar"
+				<a class="btn btn-primary btn-md" href="/permissoes/cadastrar"
 					role="button"> <span class="oi oi-plus" title="Cadastro"
-					aria-hidden="true">Cadastrar Funcionários</span>
+					aria-hidden="true">Cadastrar Permissões</span>
 				</a>
 			</div>
 		</nav>
@@ -26,47 +26,46 @@
 					<thead>
 						<tr>
 							<th scope="#">#</th>
-							<th scope="Nome da Cidade">Funcionário</th>
-							<th scope="Nome do Estado">Fornecedor</th>
-							<th scope="Sigla">Data</th>
+							<th scope="nome_do_funcionario">Nome do Funcionário</th>
+							<th scope="nome_da_funcao">Nome da Função</th>
+							<th scope="data">Data de Cadastro</th>
 							<th scope="acao">Ação</th>
 						</tr>
 					</thead>
 					<tbody>
-						<tr th:each="entrada : ${listaEntrada}">
-							<td th:text="${entrada.id}"></td>
-							<td th:text="${entrada.funcionario.nome}"></td>
-							<td th:text="${entrada.fornecedor}"></td>
-							<td	th:text="${#dates.format(entrada.dataEntrada, 'dd-MM-yyyy')}"></td>
+						<tr th:each="permissao : ${listaPermissoes}">
+							<td th:text="${permissao.id}"></td>
+							<td th:text="${permissao.funcionario.nome}"></td>
+							<td th:text="${permissao.papel.nome}"></td>
+							<td th:text="${#dates.format(permissao.dataCadastro, 'dd-MM-yyyy')}"></td>
 							<td colspan="2"><a class="btn btn-info btn-sm"
-								th:href="@{/entrada/editar/{id}(id=${entrada.id})}"
-								role="button"> <span class="oi oi-brush" title="Editar"
-									aria-hidden="true"></span>
+								th:href="@{/permissoes/editar/{id}(id=${permissao.id})}" role="button">
+									<span class="oi oi-brush" title="Editar" aria-hidden="true"></span>
 							</a> <a id="btn_cidades/excluir/1" class="btn btn-danger btn-sm"
 								data-toggle="modal" data-target="#modal-warning"
-								th:attr="data-target='#modal-warning'+${entrada.id }"> <span
+								th:attr="data-target='#modal-warning'+${permissao.id }"> <span
 									class="oi oi-circle-x"></span>
 							</a>
 								<div class="modal modal-warning fade in"
-									th:id="modal-warning+${entrada.id }">
+									th:id="modal-warning+${permissao.id }">
 									<div class="modal-dialog">
 										<div class="modal-content">
 											<div class="modal-header">
-												<h5 class="modal-title">Deletar Entrada</h5>
+												<h5 class="modal-title">Deletar Permissão</h5>
 												<button type="button" class="close" data-dismiss="modal"
 													aria-label="Fechar">
 													<span aria-hidden="true">×</span>
 												</button>
-
+												
 											</div>
 											<div class="modal-body">
-												<h3>Deseja remover a entrada?</h3>
+												<h3>Deseja remover a permissão?</h3>
 											</div>
 											<div class="modal-footer">
 												<button type="button" class="btn btn-outline pull-left"
 													data-dismiss="modal">Fechar</button>
 												<a type="button" class="btn btn-outline"
-													th:href="@{/entrada/remover/{id}(id=${entrada.id})}"><i
+													th:href="@{/permissoes/remover/{id}(id=${permissao.id})}"><i
 													class="fa fa-check"></i>&nbsp;Sim</a>
 											</div>
 										</div>
