--- a/src/main/resources/templates/administrativo/papeis/lista.html
+++ b/src/main/resources/templates/administrativo/papeis/lista.html
@@ -10,11 +10,11 @@
 			<div class="collapse navbar-collapse" id="navbarsExampleDefault">
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item active"><i class="oi oi-caret-right"></i>
-						<span>Lista de Funcionários</span></li>
+						<span>Lista de Funções</span></li>
 				</ul>
 				<a class="btn btn-primary btn-md" href="/papeis/cadastrar"
 					role="button"> <span class="oi oi-plus" title="Cadastro"
-					aria-hidden="true">Cadastrar Funcionários</span>
+					aria-hidden="true">Cadastrar Funções</span>
 				</a>
 			</div>
 		</nav>
@@ -31,7 +31,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr th:each="papel : ${listaEstados}">
+						<tr th:each="papel : ${listaPapeis}">
 							<td th:text="${papel.id}"></td>
 							<td th:text="${papel.nome}"></td>
 
