--- a/src/main/resources/templates/administrativo/estados/cadastro.html
+++ b/src/main/resources/templates/administrativo/estados/cadastro.html
@@ -15,7 +15,7 @@
 					</ul>
 				</div>
 				<a class="btn btn-primary btn-md"
-					href="/estados/listar" role="button"> <span
+					href="/administrativo/estados/listar" role="button"> <span
 					class="oi oi-spreadsheet" title="Cadastro" aria-hidden="true"></span>
 					<span>Listar Estado</span>
 				</a>
@@ -23,7 +23,7 @@
 		</div>
 
 		<div class="container" id="cadastro">
-			<form action="/estados/cadastrar"
+			<form action="/administrativo/estados/cadastrar"
 				method="POST" th:object="${estado}">
 				<div class="form-row">
 					<div class="form-group col-md-6">
