--- a/src/main/resources/templates/administrativo/estados/lista.html
+++ b/src/main/resources/templates/administrativo/estados/lista.html
@@ -12,7 +12,7 @@
 					<li class="nav-item active"><i class="oi oi-caret-right"></i>
 						<span>Lista de Funcionários</span></li>
 				</ul>
-				<a class="btn btn-primary btn-md" href="/estados/cadastrar"
+				<a class="btn btn-primary btn-md" href="/administrativo/estados/cadastrar"
 					role="button"> <span class="oi oi-plus" title="Cadastro"
 					aria-hidden="true">Cadastrar Funcionários</span>
 				</a>
@@ -38,7 +38,7 @@
 							<td th:text="${estado.sigla}"></td>
 
 							<td colspan="2"><a class="btn btn-info btn-sm"
-								th:href="@{/estados/editar/{id}(id=${estado.id})}" role="button">
+								th:href="@{/administrativo/estados/editar/{id}(id=${estado.id})}" role="button">
 									<span class="oi oi-brush" title="Editar" aria-hidden="true"></span>
 							</a> <a id="btn_estados/excluir/1" class="btn btn-danger btn-sm"
 								data-toggle="modal" data-target="#modal-warning"
@@ -64,7 +64,7 @@
 												<button type="button" class="btn btn-outline pull-left"
 													data-dismiss="modal">Fechar</button>
 												<a type="button" class="btn btn-outline"
-													th:href="@{/estados/remover/{id}(id=${estado.id})}"><i
+													th:href="@{/administrativo/estados/remover/{id}(id=${estado.id})}"><i
 													class="fa fa-check"></i>&nbsp;Sim</a>
 											</div>
 										</div>
