--- a/src/main/resources/templates/administrativo/fragments/layout.html
+++ b/src/main/resources/templates/administrativo/fragments/layout.html
@@ -30,8 +30,14 @@
 					<button type="button" class="btn btn-dark navbar-toggle pull-left">
 						<i class="oi oi-menu"></i>
 					</button>
-					<a class="navbar-brand " href="#">Painel Administrativo da Loja
-						Virtual</a>
+					<a class="navbar-brand " href="/administrativo">Painel
+						Administrativo da Loja Virtual</a>
+
+				</div>
+				<div class="text-right">
+					<a class="btn btn-primary btn-md" href="/logout" role="button">
+						<span title="logout" aria-hidden="true">Logout</span>
+					</a>
 				</div>
 			</div>
 		</nav>
@@ -50,58 +56,60 @@
 				<ul class="nav nav-pills">
 					<li class="nav-item"><span class="nav-link active">Entrada</span></li>
 					<li class="nav-item"><a class="nav-link"
-						href="/entrada/cadastrar"> <i class="oi oi-plus"></i> <span>Cadastrar
-						</span>
+						href="/administrativo/entrada/cadastrar"> <i
+							class="oi oi-plus"></i> <span>Cadastrar </span>
 					</a></li>
 					<li class="nav-item"><a class="nav-link"
-						href="/entrada/listar"> <i class="oi oi-spreadsheet"></i> <span>Listar
-						</span>
+						href="/administrativo/entrada/listar"> <i
+							class="oi oi-spreadsheet"></i> <span>Listar </span>
 					</a></li>
 				</ul>
 
 				<ul class="nav nav-pills">
 					<li class="nav-item"><span class="nav-link active">Funcionários</span></li>
 					<li class="nav-item"><a class="nav-link"
-						href="/funcionarios/cadastrar"> <i class="oi oi-plus"></i> <span>Cadastrar
-						</span>
+						href="/administrativo/funcionarios/cadastrar"> <i
+							class="oi oi-plus"></i> <span>Cadastrar </span>
 					</a></li>
 					<li class="nav-item"><a class="nav-link"
-						href="/funcionarios/listar"> <i class="oi oi-spreadsheet"></i>
-							<span>Listar </span>
+						href="/administrativo/funcionarios/listar"> <i
+							class="oi oi-spreadsheet"></i> <span>Listar </span>
 					</a></li>
 				</ul>
 
 				<ul class="nav nav-pills">
 					<li class="nav-item"><span class="nav-link active">Papéis</span></li>
 					<li class="nav-item"><a class="nav-link"
-						href="/papeis/cadastrar"> <i class="oi oi-plus"></i> <span>Cadastrar
-						</span>
+						href="/administrativo/papeis/cadastrar"> <i class="oi oi-plus"></i>
+							<span>Cadastrar </span>
 					</a></li>
-					<li class="nav-item"><a class="nav-link" href="/papeis/listar">
-							<i class="oi oi-spreadsheet"></i> <span>Listar </span>
+					<li class="nav-item"><a class="nav-link"
+						href="/administrativo/papeis/listar"> <i
+							class="oi oi-spreadsheet"></i> <span>Listar </span>
 					</a></li>
 				</ul>
 
 				<ul class="nav nav-pills">
 					<li class="nav-item"><span class="nav-link active">Permissoes</span></li>
 					<li class="nav-item"><a class="nav-link"
-						href="/permissoes/cadastrar"> <i class="oi oi-plus"></i> <span>Cadastrar
-						</span>
+						href="/administrativo/permissoes/cadastrar"> <i
+							class="oi oi-plus"></i> <span>Cadastrar </span>
 					</a></li>
-					<li class="nav-item"><a class="nav-link" href="/permissoes/listar">
-							<i class="oi oi-spreadsheet"></i> <span>Listar </span>
+					<li class="nav-item"><a class="nav-link"
+						href="/administrativo/permissoes/listar"> <i
+							class="oi oi-spreadsheet"></i> <span>Listar </span>
 					</a></li>
 				</ul>
 
 				<ul class="nav nav-pills">
 					<li class="nav-item"><span class="nav-link active">Estados</span></li>
 					<li class="nav-item"><a class="nav-link"
-						href="/estados/cadastrar"> <i class="oi oi-plus"></i> <span>Cadastrar
-						</span>
+						href="/administrativo/estados/cadastrar"> <i
+							class="oi oi-plus"></i> <span>Cadastrar </span>
 					</a></li>
 					<li class="nav-item"><a class="nav-link"
-						href="/estados/listar"> <i class="oi oi-spreadsheet"></i> <span>Listar
-						</span>
+						href="/administrativo/estados/listar"> <i
+							class="oi oi-spreadsheet"></i> <span>Listar </span>
 					</a></li>
 				</ul>
 
@@ -109,24 +117,24 @@
 				<ul class="nav nav-pills">
 					<li class="nav-item"><span class="nav-link active">Cidades</span></li>
 					<li class="nav-item"><a class="nav-link"
-						href="/cidades/cadastrar"> <i class="oi oi-plus"></i> <span>Cadastrar
-						</span>
+						href="/administrativo/cidades/cadastrar"> <i
+							class="oi oi-plus"></i> <span>Cadastrar </span>
 					</a></li>
 					<li class="nav-item"><a class="nav-link"
-						href="/cidades/listar"> <i class="oi oi-spreadsheet"></i> <span>Listar
-						</span>
+						href="/administrativo/cidades/listar"> <i
+							class="oi oi-spreadsheet"></i> <span>Listar </span>
 					</a></li>
 				</ul>
 
 				<ul class="nav nav-pills">
 					<li class="nav-item"><span class="nav-link active">Produtos</span></li>
 					<li class="nav-item"><a class="nav-link"
-						href="/produtos/cadastrar"> <i class="oi oi-plus"></i> <span>Cadastrar
-						</span>
+						href="/administrativo/produtos/cadastrar"> <i
+							class="oi oi-plus"></i> <span>Cadastrar </span>
 					</a></li>
 					<li class="nav-item"><a class="nav-link"
-						href="/produtos/listar"> <i class="oi oi-spreadsheet"></i> <span>Listar
-						</span>
+						href="/administrativo/produtos/listar"> <i
+							class="oi oi-spreadsheet"></i> <span>Listar </span>
 					</a></li>
 				</ul>
 
@@ -135,14 +143,12 @@
 		</aside>
 
 		<section class="layout-content" layout:fragment="corpo"></section>
-
+		<footer> </footer>
 	</div>
-	<footer class="layout-footer">
-		<div class="container">
-			<span class="footer-copy">&copy; 2018 MBallem. Todos os
-				direitos reservados.</span>
-		</div>
-	</footer>
+
+
+
+
 
 	<!-- Bootstrap core JavaScript
     ================================================== -->
