--- a/src/main/resources/templates/administrativo/produtos/cadastro.html
+++ b/src/main/resources/templates/administrativo/produtos/cadastro.html
@@ -15,7 +15,7 @@
 					</ul>
 				</div>
 				<a class="btn btn-primary btn-md"
-					href="/produtos/listar" role="button"> <span
+					href="/administrativo/produtos/listar" role="button"> <span
 					class="oi oi-spreadsheet" title="Cadastro" aria-hidden="true"></span>
 					<span>Listar Produto</span>
 				</a>
@@ -23,7 +23,7 @@
 		</div>
 
 		<div class="container" id="cadastro">
-			<form action="/produtos/cadastrar"
+			<form action="/administrativo/produtos/cadastrar"
 				enctype="multipart/form-data"
 				method="POST" th:object="${produto}">
 				<div class="form-row">
