--- a/src/main/resources/templates/administrativo/cidades/cadastro.html
+++ b/src/main/resources/templates/administrativo/cidades/cadastro.html
@@ -15,7 +15,7 @@
 					</ul>
 				</div>
 				<a class="btn btn-primary btn-md"
-					href="/cidades/listar" role="button"> <span
+					href="/administrativo/cidades/listar" role="button"> <span
 					class="oi oi-spreadsheet" title="Cadastro" aria-hidden="true"></span>
 					<span>Listar Cidades</span>
 				</a>
@@ -23,7 +23,7 @@
 		</div>
 
 		<div class="container" id="cadastro">
-			<form action="/cidades/cadastrar"
+			<form action="/administrativo/cidades/cadastrar"
 				method="POST" th:object="${cidade}">
 				<div class="form-row">
 					<div class="form-group col-md-6">
