--- a/src/main/resources/templates/administrativo/cidades/lista.html
+++ b/src/main/resources/templates/administrativo/cidades/lista.html
@@ -12,7 +12,7 @@
 					<li class="nav-item active"><i class="oi oi-caret-right"></i>
 						<span>Lista de Funcionários</span></li>
 				</ul>
-				<a class="btn btn-primary btn-md" href="/cidades/cadastrar"
+				<a class="btn btn-primary btn-md" href="/administrativo/cidades/cadastrar"
 					role="button"> <span class="oi oi-plus" title="Cadastro"
 					aria-hidden="true">Cadastrar Funcionários</span>
 				</a>
@@ -39,7 +39,7 @@
 							<td th:text="${cidade.estado.nome}"></td>
 							<td th:text="${cidade.estado.sigla}"></td>
 							<td colspan="2"><a class="btn btn-info btn-sm"
-								th:href="@{/cidades/editar/{id}(id=${cidade.id})}" role="button">
+								th:href="@{/administrativo/cidades/editar/{id}(id=${cidade.id})}" role="button">
 									<span class="oi oi-brush" title="Editar" aria-hidden="true"></span>
 							</a> <a id="btn_cidades/excluir/1" class="btn btn-danger btn-sm"
 								data-toggle="modal" data-target="#modal-warning"
@@ -65,7 +65,7 @@
 												<button type="button" class="btn btn-outline pull-left"
 													data-dismiss="modal">Fechar</button>
 												<a type="button" class="btn btn-outline"
-													th:href="@{/cidades/remover/{id}(id=${cidade.id})}"><i
+													th:href="@{/administrativo/cidades/remover/{id}(id=${cidade.id})}"><i
 													class="fa fa-check"></i>&nbsp;Sim</a>
 											</div>
 										</div>
