--- a/src/main/resources/templates/administrativo/entrada/lista.html
+++ b/src/main/resources/templates/administrativo/entrada/lista.html
@@ -12,7 +12,7 @@
 					<li class="nav-item active"><i class="oi oi-caret-right"></i>
 						<span>Lista de Funcionários</span></li>
 				</ul>
-				<a class="btn btn-primary btn-md" href="/cidades/cadastrar"
+				<a class="btn btn-primary btn-md" href="/administrativo/cidades/cadastrar"
 					role="button"> <span class="oi oi-plus" title="Cadastro"
 					aria-hidden="true">Cadastrar Funcionários</span>
 				</a>
@@ -39,7 +39,7 @@
 							<td th:text="${entrada.fornecedor}"></td>
 							<td	th:text="${#dates.format(entrada.dataEntrada, 'dd-MM-yyyy')}"></td>
 							<td colspan="2"><a class="btn btn-info btn-sm"
-								th:href="@{/entrada/editar/{id}(id=${entrada.id})}"
+								th:href="@{/administrativo/entrada/editar/{id}(id=${entrada.id})}"
 								role="button"> <span class="oi oi-brush" title="Editar"
 									aria-hidden="true"></span>
 							</a> <a id="btn_cidades/excluir/1" class="btn btn-danger btn-sm"
@@ -66,7 +66,7 @@
 												<button type="button" class="btn btn-outline pull-left"
 													data-dismiss="modal">Fechar</button>
 												<a type="button" class="btn btn-outline"
-													th:href="@{/entrada/remover/{id}(id=${entrada.id})}"><i
+													th:href="@{/administrativo/entrada/remover/{id}(id=${entrada.id})}"><i
 													class="fa fa-check"></i>&nbsp;Sim</a>
 											</div>
 										</div>
