--- a/src/main/resources/templates/administrativo/funcionarios/lista.html
+++ b/src/main/resources/templates/administrativo/funcionarios/lista.html
@@ -13,7 +13,7 @@
 					<li class="nav-item active"><i class="oi oi-caret-right"></i>
 						<span>Lista de Funcionários</span></li>
 				</ul>
-				<a class="btn btn-primary btn-md" href="/funcionarios/cadastrar"
+				<a class="btn btn-primary btn-md" href="/administrativo/funcionarios/cadastrar"
 					role="button"> <span class="oi oi-plus" title="Cadastro"
 					aria-hidden="true"></span> <span>Cadastrar Funcionários</span>
 				</a>
@@ -40,7 +40,7 @@
 
 						<nav class="navbar navbar-light bg-light">
 							<form class="form-inline" method="GET"
-								action="/funcionarios/buscar/nome">
+								action="/administrativo/funcionarios/buscar/nome">
 								<input class="form-control mr-sm-2" type="search"
 									placeholder="nome" aria-label="Search" name="nome" />
 								<button class="btn btn-outline-success my-2 my-sm-0">Search</button>
@@ -56,7 +56,7 @@
 
 						<nav class="navbar navbar-light bg-light">
 							<form class="form-inline" method="GET"
-								action="/funcionarios/buscar/cargo">
+								action="/administrativo/funcionarios/buscar/cargo">
 								<select class="form-control mr-sm-2" name="cargo"
 									aria-label="Search">
 									<option value="">Cargo</option>
@@ -85,7 +85,7 @@
 
 						<nav class="navbar navbar-light bg-light">
 							<form class="form-inline" method="GET"
-								action="/funcionarios/buscar/data">
+								action="/administrativo/funcionarios/buscar/data">
 								<input class="form-control mr-sm-2" type="date"
 									aria-label="Search" name="entrada" /> <input
 									class="form-control mr-sm-2" type="date" aria-label="Search"
@@ -121,7 +121,7 @@
 							<td th:text="${funcionario.cidade}"></td>
 							<td colspan="2">
 								<a class="btn btn-info btn-sm"
-									th:href="@{/funcionarios/editar/{id}(id=${funcionario.id})}"
+									th:href="@{/administrativo/funcionarios/editar/{id}(id=${funcionario.id})}"
 									role="button"> <span class="oi oi-brush" title="Editar"
 									aria-hidden="true"></span>
 								</a>
@@ -148,7 +148,7 @@
 												<button type="button" class="btn btn-outline pull-left"
 													data-dismiss="modal">Fechar</button>
 												<a type="button" class="btn btn-outline"
-													th:href="@{/funcionarios/remover/{id}(id=${funcionario.id})}"><i
+													th:href="@{/administrativo/funcionarios/remover/{id}(id=${funcionario.id})}"><i
 													class="fa fa-check"></i>&nbsp;Sim</a>
 											</div>
 										</div>
