--- a/src/main/resources/templates/administrativo/papeis/lista.html
+++ b/src/main/resources/templates/administrativo/papeis/lista.html
@@ -12,7 +12,7 @@
 					<li class="nav-item active"><i class="oi oi-caret-right"></i>
 						<span>Lista de Funções</span></li>
 				</ul>
-				<a class="btn btn-primary btn-md" href="/papeis/cadastrar"
+				<a class="btn btn-primary btn-md" href="/administrativo/papeis/cadastrar"
 					role="button"> <span class="oi oi-plus" title="Cadastro"
 					aria-hidden="true">Cadastrar Funções</span>
 				</a>
@@ -36,7 +36,7 @@
 							<td th:text="${papel.nome}"></td>
 
 							<td colspan="2"><a class="btn btn-info btn-sm"
-								th:href="@{/papeis/editar/{id}(id=${papel.id})}" role="button">
+								th:href="@{/administrativo/papeis/editar/{id}(id=${papel.id})}" role="button">
 									<span class="oi oi-brush" title="Editar" aria-hidden="true"></span>
 							</a> <a id="btn_estados/excluir/1" class="btn btn-danger btn-sm"
 								data-toggle="modal" data-target="#modal-warning"
@@ -62,7 +62,7 @@
 												<button type="button" class="btn btn-outline pull-left"
 													data-dismiss="modal">Fechar</button>
 												<a type="button" class="btn btn-outline"
-													th:href="@{/papeis/remover/{id}(id=${papel.id})}"><i
+													th:href="@{/administrativo/papeis/remover/{id}(id=${papel.id})}"><i
 													class="fa fa-check"></i>&nbsp;Sim</a>
 											</div>
 										</div>
