--- a/src/main/resources/templates/administrativo/permissoes/cadastro.html
+++ b/src/main/resources/templates/administrativo/permissoes/cadastro.html
@@ -14,7 +14,7 @@
 							<span>Cadastrar Permissões dos Funcionários</span></li>
 					</ul>
 				</div>
-				<a class="btn btn-primary btn-md" href="/permissoes/listar"
+				<a class="btn btn-primary btn-md" href="/administrativo/permissoes/listar"
 					role="button"> <span class="oi oi-spreadsheet" title="Cadastro"
 					aria-hidden="true"></span> <span>Listar Permissões</span>
 				</a>
@@ -22,7 +22,7 @@
 		</div>
 
 		<div class="container" id="cadastro">
-			<form action="/permissoes/cadastrar" method="POST"
+			<form action="/administrativo/permissoes/cadastrar" method="POST"
 				th:object="${permissao}">
 				<div class="form-row">
 					<div class="form-group col-md-6">
