--- a/src/main/resources/templates/administrativo/permissoes/lista.html
+++ b/src/main/resources/templates/administrativo/permissoes/lista.html
@@ -12,7 +12,7 @@
 					<li class="nav-item active"><i class="oi oi-caret-right"></i>
 						<span>Lista de Permissões</span></li>
 				</ul>
-				<a class="btn btn-primary btn-md" href="/permissoes/cadastrar"
+				<a class="btn btn-primary btn-md" href="/administrativo/permissoes/cadastrar"
 					role="button"> <span class="oi oi-plus" title="Cadastro"
 					aria-hidden="true">Cadastrar Permissões</span>
 				</a>
@@ -39,7 +39,7 @@
 							<td th:text="${permissao.papel.nome}"></td>
 							<td th:text="${#dates.format(permissao.dataCadastro, 'dd-MM-yyyy')}"></td>
 							<td colspan="2"><a class="btn btn-info btn-sm"
-								th:href="@{/permissoes/editar/{id}(id=${permissao.id})}" role="button">
+								th:href="@{/administrativo/permissoes/editar/{id}(id=${permissao.id})}" role="button">
 									<span class="oi oi-brush" title="Editar" aria-hidden="true"></span>
 							</a> <a id="btn_cidades/excluir/1" class="btn btn-danger btn-sm"
 								data-toggle="modal" data-target="#modal-warning"
@@ -65,7 +65,7 @@
 												<button type="button" class="btn btn-outline pull-left"
 													data-dismiss="modal">Fechar</button>
 												<a type="button" class="btn btn-outline"
-													th:href="@{/permissoes/remover/{id}(id=${permissao.id})}"><i
+													th:href="@{/administrativo/permissoes/remover/{id}(id=${permissao.id})}"><i
 													class="fa fa-check"></i>&nbsp;Sim</a>
 											</div>
 										</div>
