--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -42,7 +42,7 @@
 </style>
 </head>
 <body>
-	<div class="login-form">
+	<!-- <div class="login-form">
 		<form th:action="@{/login}" method="post">
 			<h2 class="text-center">Login do Painel Administrativo</h2>
 			<div class="form-group">
@@ -56,7 +56,64 @@
 			<div class="form-group">
 				<button type="submit" class="btn btn-primary btn-block">Entrar</button>
 			</div>
+ -->
 
+
+
+
+	<div class="login-form">
+		<div class="row">
+			<div>
+				<div class="card pt-4">
+					<div class="card-body">
+						<div class="text-center mb-5">
+							<img src="assets/images/favicon.svg" height="48" class='mb-4'>
+							<h3>Sign In</h3>
+							<p>Please sign in to continue.</p>
+						</div>
+						<form th:action="@{/login}" method="post">
+							<div class="form-group position-relative has-icon-left">
+								<label for="username">Email</label>
+								<div class="position-relative">
+									<input type="text" id="username" class="form-control"
+										name="username" placeholder="E-mail" required="required">
+									<div class="form-control-icon">
+										<i data-feather="user"></i>
+									</div>
+								</div>
+							</div>
+							<div class="form-group position-relative has-icon-left">
+								<div class="clearfix">
+									<label for="password">Senha</label> <a
+										href="auth-forgot-password.html" class='float-right'> <small>
+											Esqueceu a senha?</small>
+									</a>
+								</div>
+								<div class="position-relative">
+									<input type="text" class="form-control" id="password"
+										name="password" placeholder="Senha" required="required">
+									<div class="form-control-icon">
+										<i data-feather="lock"></i>
+									</div>
+								</div>
+							</div>
+							<div class="form-group">
+								<div class='form-check clearfix my-4'>
+									<div class="checkbox float-left">
+										<input type="checkbox" id="checkbox1">
+										<label for="checkbox1">Remember me</label>
+									</div>
+								</div>
+								<div class="clearfix">
+									<button class="btn btn-primary float-right">Entrada</button>
+								</div>
+							</div>
+						</form>
+
+					</div>
+				</div>
+			</div>
+		</div>
 		</form>
 	</div>
 </body>
