--- a/src/main/resources/templates/administrativo/funcionarios/cadastro.html
+++ b/src/main/resources/templates/administrativo/funcionarios/cadastro.html
@@ -29,13 +29,13 @@
 					<div class="form-group col-md-6">
 						<label for="nome">Nome do Funcionário</label> <input type="text"
 							class="form-control" id="nome" placeholder="Nome Completo"
-							autofocus="autofocus" value="" name="nome" th:field="*{nome}" /> <!--  -->
+							autofocus="autofocus" value="" name="nome" th:field="*{nome}" /> 
 						<div class="invalid-feedback"></div>
 					</div>
 					<div class="form-group col-md-6">
 						<label for="salario">Salário Bruto</label> <input type="number" step=".01"
 							class="form-control" id="salario" 
-							 value="" name="salarioBruto" th:field="*{salarioBruto}" /> <!-- data-mask="#.###,00" data-mask-reverse="true"  -->
+							 value="" name="salarioBruto" th:field="*{salarioBruto}"/>
 						<div class="invalid-feedback"></div>
 					</div>
 				</div>
