--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -38,27 +38,11 @@
 .btn {
 	font-size: 15px;
 	font-weight: bold;
+	
 }
 </style>
 </head>
 <body>
-	<!-- <div class="login-form">
-		<form th:action="@{/login}" method="post">
-			<h2 class="text-center">Login do Painel Administrativo</h2>
-			<div class="form-group">
-				<input type="text" class="form-control" name="username"
-					placeholder="E-mail" required="required">
-			</div>
-			<div class="form-group">
-				<input type="password" name="password" class="form-control"
-					placeholder="Senha" required="required">
-			</div>
-			<div class="form-group">
-				<button type="submit" class="btn btn-primary btn-block">Entrar</button>
-			</div>
- -->
-
-
 
 
 	<div class="login-form">
@@ -67,9 +51,9 @@
 				<div class="card pt-4">
 					<div class="card-body">
 						<div class="text-center mb-5">
-							<img src="assets/images/favicon.svg" height="48" class='mb-4'>
-							<h3>Sign In</h3>
-							<p>Please sign in to continue.</p>
+							<img src="/image/favicon.png" height="48" class='mb-4'>
+							<h3 style="color: blue;"> Conecte-se</h3>
+							<p>Por favor conecte-se para continuar.</p>
 						</div>
 						<form th:action="@{/login}" method="post">
 							<div class="form-group position-relative has-icon-left">
@@ -104,8 +88,8 @@
 										<label for="checkbox1">Remember me</label>
 									</div>
 								</div>
-								<div class="clearfix">
-									<button class="btn btn-primary float-right">Entrada</button>
+								<div class="clearfix text-center">
+									<button class="btn btn-primary pull-center">Entrar</button>
 								</div>
 							</div>
 						</form>
