--- a/src/main/resources/templates/clientes/carrinho.html
+++ b/src/main/resources/templates/clientes/carrinho.html
@@ -3,25 +3,36 @@
 
 <head>
 
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta charset="utf-8">
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<title>Loja Spring</title>
+<title>Loja Spring</title>
 
-	<!-- Bootstrap core CSS -->
-	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-	<!-- Custom styles for this template -->
-	<link href="css/shop-cart.css" rel="stylesheet">
-
+<!-- Bootstrap core CSS -->
+<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<link href="/webjars/open-iconic/font/css/open-iconic-bootstrap.min.css"
+	rel="stylesheet" />
 
 
-	<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-	<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800&display=swap" rel="stylesheet">
+<!-- Custom styles for this template -->
+<link href="css/shop-cart.css" rel="stylesheet">
 
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+
+
+<link
+	href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+	rel="stylesheet" id="bootstrap-css">
+<script
+	src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script
+	src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<link
+	href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800&display=swap"
+	rel="stylesheet">
+
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
 </head>
 
@@ -33,15 +44,16 @@
 	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 		<div class="container">
 			<a class="navbar-brand" href="#">Loja Spring</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-				aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+			<button class="navbar-toggler" type="button" data-toggle="collapse"
+				data-target="#navbarResponsive" aria-controls="navbarResponsive"
+				aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarResponsive">
 				<ul class="navbar-nav ml-auto">
-					<li class="nav-item active"><a class="nav-link" href="#">Home
+					<li class="nav-item active"><a class="nav-link" href="/">Home
 							<span class="sr-only">(current)</span>
-						</a></li>
+					</a></li>
 					<li class="nav-item"><a class="nav-link" href="#">About</a></li>
 					<li class="nav-item"><a class="nav-link" href="#">Services</a>
 					</li>
@@ -67,13 +79,18 @@
 						<thead>
 							<tr>
 								<th>
-									<h4> Produto </h4>
+									<h4>Produto</h4>
 								</th>
 								<th>
 									<h4>Quantidade</h4>
 								</th>
 								<th>
 									<h4>Total</h4>
+								</th>
+								<th>
+									<h6>
+										Excluir Item
+										</h4>
 								</th>
 								<th></th>
 							</tr>
@@ -83,7 +100,8 @@
 								<td>
 									<div class="display-flex align-center">
 										<div class="img-product">
-											<img src="https://www.91-img.com/pictures/laptops/asus/asus-x552cl-sx019d-core-i3-3rd-gen-4-gb-500-gb-dos-1-gb-61721-large-1.jpg"
+											<img
+												src="https://www.91-img.com/pictures/laptops/asus/asus-x552cl-sx019d-core-i3-3rd-gen-4-gb-500-gb-dos-1-gb-61721-large-1.jpg"
 												alt="" class="mCS_img_loaded">
 										</div>
 										<div class="name-product">
@@ -102,15 +120,17 @@
 								<td>
 									<div class="total">$6,250.00</div>
 								</td>
-								<td><a href="#" title=""> <img src="images/icons/delete.png" alt=""
-											class="mCS_img_loaded">
-									</a></td>
+								<td><a class="btn btn-danger btn-bg" role="button"> <!-- <img
+										src="images/icons/delete.png" alt="" class="mCS_img_loaded"> -->
+										<span class="oi oi-circle-x" style="color: white;"></span>
+								</a></td>
 							</tr>
 							<tr>
 								<td>
 									<div class="display-flex align-center">
 										<div class="img-product">
-											<img src="https://www.91-img.com/pictures/laptops/asus/asus-x552cl-sx019d-core-i3-3rd-gen-4-gb-500-gb-dos-1-gb-61721-large-1.jpg"
+											<img
+												src="https://www.91-img.com/pictures/laptops/asus/asus-x552cl-sx019d-core-i3-3rd-gen-4-gb-500-gb-dos-1-gb-61721-large-1.jpg"
 												alt="" class="mCS_img_loaded">
 										</div>
 										<div class="name-product">
@@ -129,9 +149,10 @@
 								<td>
 									<div class="total">$6,250.00</div>
 								</td>
-								<td><a href="#" title=""> <img src="images/icons/delete.png" alt=""
-											class="mCS_img_loaded">
-									</a></td>
+								<td><a class="btn btn-danger btn-bg" role="button"> <!-- <img
+										src="images/icons/delete.png" alt="" class="mCS_img_loaded"> -->
+										<span class="oi oi-circle-x" style="color: white;"></span>
+								</a></td>
 							</tr>
 						</tbody>
 					</table>
@@ -204,10 +225,12 @@
 </body>
 
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
 	integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
 	crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+<script
+	src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
 	integrity="	sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
 	crossorigin="anonymous"></script>
 
