--- a/src/main/resources/templates/clientes/fragments/layout.html
+++ b/src/main/resources/templates/clientes/fragments/layout.html
@@ -42,11 +42,7 @@
 			class="navbar navbar-inverse navbar navbar-dark bg-dark fixed-top">
 			<div class="container-fluid">
 				<div class="navbar-header">
-					<button type="button" class="btn btn-dark navbar-toggle pull-left">
-						<i class="oi oi-menu"></i>
-					</button>
-					<a class="navbar-brand " href="/administrativo">Spring Loja
-						Virtual</a>
+
 
 				</div>
 			</div>
@@ -57,7 +53,7 @@
 
 		<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 			<div class="container">
-				<a class="navbar-brand" href="#">Loja Spring</a>
+				<a class="navbar-brand" id="logo" href="#">Loja Spring<img src="/image/logo.png"></a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse"
 					data-target="#navbarResponsive" aria-controls="navbarResponsive"
 					aria-expanded="false" aria-label="Toggle navigation">
@@ -65,13 +61,15 @@
 				</button>
 				<div class="collapse navbar-collapse" id="navbarResponsive">
 					<ul class="navbar-nav ml-auto">
-						<li class="nav-item active"><a class="nav-link" href="#">Home
+						<li class="nav-item active"><a class="nav-link" href="/">Principal
 								<span class="sr-only">(current)</span>
 						</a></li>
-						<li class="nav-item"><a class="nav-link" href="#">About</a></li>
-						<li class="nav-item"><a class="nav-link" href="#">Services</a>
+						<li class="nav-item"><a class="nav-link" href="#">Sobre</a></li> <!-- TODO: Criar página sobre.html -->
+						<li class="nav-item"><a class="nav-link" href="#">Contato</a><!-- TODO: Criar página contato.html -->
 						</li>
-						<li class="nav-item"><a class="nav-link" href="#">Contact</a>
+						<li class="nav-item"><a class="nav-link" href="#">Cadastre-se</a><!-- TODO: Criar página cadastro.html -->
+						</li>
+						<li class="nav-item"><a class="nav-link" href="#">Login</a><!-- TODO: Criar página cadastro.html -->
 						</li>
 					</ul>
 				</div>
