--- a/src/main/resources/templates/administrativo/papeis/cadastro.html
+++ b/src/main/resources/templates/administrativo/papeis/cadastro.html
@@ -10,7 +10,7 @@
 			<nav class="navbar navbar-expand-md navbar-top bg-light">
 				<div class="collapse navbar-collapse" id="navbarsExampleDefault">
 					<ul class="navbar-nav">
-						<li class="nav-item active"><i class="oi oi-caret-right"></i>
+						<li class="nav-item active"><em class="oi oi-caret-right"></em>
 							<span>Cadastrar Papel</span></li>
 					</ul>
 				</div>
