--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,11 +28,14 @@
 
 				<h3 class="my-4">Categorias</h3>
 				<div class="list-group">
-					<a href="#" class="list-group-i">Category 1
+					<a href="#" class="list-group-i">Eletrônicos
 						<hr class="solid" />
-					</a> <a href="#" class="list-group-i">Category 2
+					</a> <a href="#" class="list-group-i">Celulares
 						<hr class="solid" />
-					</a> <a href="#" class="list-group-i">Category 3
+					</a> <a href="#" class="list-group-i">Computadores
+						<hr class="solid" />
+					</a>
+					</a> <a href="#" class="list-group-i">Periféricos
 						<hr class="solid" />
 					</a>
 				</div>
