--- a/src/main/resources/templates/clientes/carrinho.html
+++ b/src/main/resources/templates/clientes/carrinho.html
@@ -13,8 +13,6 @@
 <!-- Bootstrap core CSS -->
 <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-<!-- Custom styles for this template -->
-<link href="css/shop-cart.css" rel="stylesheet">
 
 
 
@@ -45,19 +43,19 @@
 			<div class="row">
 
 				<div class="col-lg-8">
-					<div class="main-heading">Shopping Cart</div>
+					<div class="main-heading ">Carrinho</div>
 					<div class="table-cart">
 						<table>
 							<thead>
 								<tr>
 									<th>
-										<h4>Produto</h4>
+										<h5>Produto</h5>
 									</th>
 									<th>
-										<h4>Quantidade</h4>
+										<h5>Quantidade</h5>
 									</th>
 									<th>
-										<h4>Total</h4>
+										<h5>Total</h5>
 									</th>
 									<th></th>
 								</tr>
@@ -74,7 +72,7 @@
 											<div class="name-product">
 												Apple iPad Mini <br>G2356
 											</div>
-											<div class="price">$1,250.00</div>
+											<div class="price">R$1,250.00</div>
 										</div>
 									</td>
 									<td class="product-count">
@@ -85,55 +83,27 @@
 										</form>
 									</td>
 									<td>
-										<div class="total">$6,250.00</div>
+										<div class="total">R$6,250.00</div>
 									</td>
 									<td><a href="#" title=""> <img
-											src="images/icons/delete.png" alt="" class="mCS_img_loaded">
+											src="/image/delete.webp" alt="" class="mCS_img_loaded">
 									</a></td>
 								</tr>
-								<tr>
-									<td>
-										<div class="display-flex align-center">
-											<div class="img-product">
-												<img
-													src="https://www.91-img.com/pictures/laptops/asus/asus-x552cl-sx019d-core-i3-3rd-gen-4-gb-500-gb-dos-1-gb-61721-large-1.jpg"
-													alt="" class="mCS_img_loaded">
-											</div>
-											<div class="name-product">
-												Apple iPad Mini <br>G2356
-											</div>
-											<div class="price">$1,250.00</div>
-										</div>
-									</td>
-									<td class="product-count">
-										<form action="#" class="count-inlineflex">
-											<div class="qtyminus">-</div>
-											<input type="text" name="quantity" value="1" class="qty">
-											<div class="qtyplus">+</div>
-										</form>
-									</td>
-									<td>
-										<div class="total">$6,250.00</div>
-									</td>
-									<td><a href="#" title=""> <img
-											src="images/icons/delete.png" alt="" class="mCS_img_loaded">
-									</a></td>
-								</tr>
+								
 							</tbody>
 						</table>
 						<div class="coupon-box">
 							<form action="#" method="get" accept-charset="utf-8">
 								<div class="coupon-input">
 									<input type="text" name="coupon code" placeholder="Coupon Code">
-									<button type="submit" class="round-black-btn">Apply
-										Coupon</button>
+									<button type="submit" class="round-black-btn">Cupom de Desconto</button>
 								</div>
 							</form>
 						</div>
 					</div>
-					<!-- /.table-cart -->
+					
 				</div>
-				<!-- /.col-lg-8 -->
+			
 				<div class="col-lg-4">
 					<div class="cart-totals">
 						<h3>Cart Totals</h3>
@@ -142,22 +112,21 @@
 								<tbody>
 									<tr>
 										<td>Subtotal</td>
-										<td class="subtotal">$2,589.00</td>
+										<td class="subtotal">R$2,589.00</td>
 									</tr>
 									<tr>
-										<td>Shipping</td>
-										<td class="free-shipping">Free Shipping</td>
+										<td>Frete</td>
+										<td class="free-shipping">Frete Gratis</td>
 									</tr>
 									<tr class="total-row">
 										<td>Total</td>
-										<td class="price-total">$1,591.00</td>
+										<td class="price-total">R$1,591.00</td>
 									</tr>
 								</tbody>
 							</table>
 							<div class="btn-cart-totals">
-								<a href="#" class="update round-black-btn" title="">Update
-									Cart</a> <a href="#" class="checkout round-black-btn" title="">Proceed
-									to Checkout</a>
+								<a href="#" class="update round-black-btn" title=""> Atualizar Carrinho
+								</a> <a href="#" class="checkout round-black-btn" title=""> Finalizar Compra</a>
 							</div>
 
 						</form>
