--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -104,8 +104,10 @@ body {
 	text-align: center;
 	color: green;
 	margin-left: 33%;
-	font-weight: 100;
+	font-family: Liberation-Serif;
+	font-weight: 50;
 	font-size: 28pt;
+	font-style: italic;
 	
 }
 #logo img{
