--- a/src/main/resources/templates/clientes/fragments/layout.html
+++ b/src/main/resources/templates/clientes/fragments/layout.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:layout="http://www.w3.org/1999/xhtml" lang="pt-br">
+<html xmlns:layout="http://www.w3.org/1999/xhtml" lang="pt-br"
+	xmlns:th="http://www.thymeleaf.org">
 
 <head>
 
@@ -13,7 +14,7 @@
 <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
 <!-- Custom styles for this template -->
-<link href="css/shop-cart.css" rel="stylesheet">
+
 
 <link
 	href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
@@ -35,6 +36,7 @@
 
 <!-- Custom styles for this template -->
 <link href="/css/style.css" rel="stylesheet" />
+<link href="/css/shop-cart.css" rel="stylesheet">
 </head>
 <body>
 	<header>
