--- a/src/main/resources/templates/administrativo/produtos/lista.html
+++ b/src/main/resources/templates/administrativo/produtos/lista.html
@@ -9,7 +9,7 @@
 		<nav class="navbar navbar-expand-md bg-light">
 			<div class="collapse navbar-collapse" id="navbarsExampleDefault">
 				<ul class="navbar-nav mr-auto">
-					<li class="nav-item active"><i class="oi oi-caret-right"></i>
+					<li class="nav-item active"><em class="oi oi-caret-right"></em>
 						<span>Lista de Produtos</span></li>
 				</ul>
 				<a class="btn btn-primary btn-md" href="/administrativo/produtos/cadastrar"
